RESOLVED FIXED 249551
[IFC][hanging punctuation] InlineContentBreaker::ContinuousContent should support leading hanging content
https://bugs.webkit.org/show_bug.cgi?id=249551
Summary [IFC][hanging punctuation] InlineContentBreaker::ContinuousContent should sup...
alan
Reported 2022-12-17 21:27:46 PST
ssia
Attachments
Patch (7.08 KB, patch)
2022-12-17 21:42 PST, alan
no flags
[fast-cq]Patch (11.29 KB, patch)
2022-12-17 22:00 PST, alan
no flags
alan
Comment 1 2022-12-17 21:42:42 PST
alan
Comment 2 2022-12-17 22:00:20 PST
Created attachment 464094 [details] [fast-cq]Patch
EWS
Comment 3 2022-12-18 07:04:50 PST
Committed 258066@main (e6ff73fa8a9f): <https://commits.webkit.org/258066@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464094 [details].
Radar WebKit Bug Importer
Comment 4 2022-12-18 07:05:17 PST
Note You need to log in before you can comment on or make changes to this bug.