[IFC][hanging punctuation] InlineContentBreaker::ContinuousContent should support leading hanging content https://bugs.webkit.org/show_bug.cgi?id=249551

Reviewed by Antti Koivisto.

This is in preparation for supporting "hanging-punctuation" property.
InlineContentBreaker::ContinuousContent is input to the line breaking logic.
As leading hanging content is considered as "negative horizontal margin",
it should be excluded when measuring the candidate content for fit.
No functionality change yet.

(This patch also removes some std::optional<InlineLayoutUnit> complexity.)
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::appendTextContent):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::appendTrailingHangingContent):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::appendLeadingHangingContent):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::reset):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):

Canonical link: https://commits.webkit.org/258066@main